# Data-Analyst-Agent

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  EVALUATION_INSTRUCTIONS.txt  LICENSE  Procfile  README.md  SUBMISSION_GUIDE.md  app.py  deploy_test.py  docker-compose.yml  final_check.py  main.py  pyproject.toml  render.yaml  requirements.txt  start.sh  start_server.bat  test_api.py  test_api_outputs.py  test_main.py  test_sample_sales.csv  test_sample_weather.csv  verify_repo.py
.github/workflows/: ci-cd.yml
routers/: analyze_router.py
services/: sales_service.py  weather_service.py
utils/: validation.py
