# [tool.poetry]
# name = "data-analyst-agent"
# version = "0.1.0"
# description = "A FastAPI-based data analyst agent."
# authors = ["Your Name <your@email.com>"]

# [tool.poetry.dependencies]
# python = ">=3.8,<3.14"
# fastapi = "*"
# uvicorn = "*"
# pandas = "*"
# numpy = "*"
# matplotlib = "*"
# seaborn = "*"
# duckdb = "*"
# requests = "*"
# beautifulsoup4 = "*"

# [build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"
